Fix profile photo display and layout issues
🔧 Profile Photo Fixes:

🖼️ Image Loading:
- Fixed profile photo display issues
- Added fallback placeholder with initials (SS)
- Implemented proper error handling for image loading
- Added cache-busting for image reload

🎨 Layout Improvements:
- Fixed status indicator positioning (moved further out)
- Added z-index to prevent overlap issues
- Improved profile photo placeholder styling
- Enhanced error handling with graceful fallback

📱 Professional Fallback:
- Blue gradient background for initials placeholder
- Large, bold 'SS' initials in white
- Same dimensions and styling as profile photo
- Smooth transitions and hover effects

🚀 JavaScript Enhancements:
- Added DOMContentLoaded event for proper image loading
- Implemented onload and onerror handlers
- Added cache-busting mechanism
- Graceful fallback to placeholder on image failure

✅ Issues Resolved:
- Profile photo now displays properly
- No more text overflow in circular frame
- Status indicator properly positioned
- Professional appearance maintained in all scenarios

The profile section now displays correctly with proper image loading and professional fallback options!

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                                 <!-- Profile Photo and Basic Info -->
                                 <div class="profile-header">
                                     <div class="profile-photo-section">
-                                        <img src="https://raw.githubusercontent.com/santoshsirikonda/santosh-portfolio/main/profile-photo.jpg" alt="Santosh Sirikonda" class="profile-photo" id="profileImg">
+                                        <img src="profile-photo.jpg" alt="Santosh Sirikonda" class="profile-photo" id="profileImg" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                        <div class="profile-photo-placeholder" style="display: none;">
+                                            <span class="initials">SS</span>
+                                        </div>
                                         <div class="status-indicator">
                                             <div class="status-dot"></div>
                                             <span>Available</span>
