--- a/index.html
+++ b/index.html
@@ -1041,24 +1041,42 @@
                 <p class="section-subtitle">Academic foundation and specialized training</p>
             </div>
             
-            <div class="education-grid">
-                <div class="education-card">
-                    <div class="education-icon">🎓</div>
-                    <div class="education-content">
-                        <h3>Master of Science in Computer Information Science</h3>
-                        <p class="institution">State University of New York</p>
-                        <p class="year">2020 - 2022</p>
-                        <p class="focus">AI/ML, Data Science, Cloud Computing</p>
+            <div class="education-timeline">
+                <div class="education-item">
+                    <div class="education-year">2020-2022</div>
+                    <div class="education-card">
+                        <div class="education-header">
+                            <div class="degree-badge">Master's</div>
+                            <div class="education-icon">🎓</div>
+                        </div>
+                        <div class="education-content">
+                            <h3>Master of Science in Computer Information Science</h3>
+                            <p class="institution">State University of New York, United States</p>
+                            <div class="focus-areas">
+                                <span class="focus-tag">AI/ML</span>
+                                <span class="focus-tag">Data Science</span>
+                                <span class="focus-tag">Cloud Computing</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
-                <div class="education-card">
-                    <div class="education-icon">🎓</div>
-                    <div class="education-content">
-                        <h3>Bachelor of Science in Computer Science</h3>
-                        <p class="institution">Jawaharlal Nehru Technological University</p>
-                        <p class="year">2014 - 2018</p>
-                        <p class="focus">Software Engineering, Algorithms, Data Structures</p>
+                <div class="education-item">
+                    <div class="education-year">2014-2018</div>
+                    <div class="education-card">
+                        <div class="education-header">
+                            <div class="degree-badge">Bachelor's</div>
+                            <div class="education-icon">🎓</div>
+                        </div>
+                        <div class="education-content">
+                            <h3>Bachelor of Science in Computer Science</h3>
+                            <p class="institution">Jawaharlal Nehru Technological University, India</p>
+                            <div class="focus-areas">
+                                <span class="focus-tag">Software Engineering</span>
+                                <span class="focus-tag">Algorithms</span>
+                                <span class="focus-tag">Data Structures</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
