--- a/index.html
+++ b/index.html
@@ -1041,41 +1041,69 @@
                 <p class="section-subtitle">Academic foundation and specialized training</p>
             </div>
             
-            <div class="education-timeline">
-                <div class="education-item">
-                    <div class="education-year">2020-2022</div>
-                    <div class="education-card">
-                        <div class="education-header">
-                            <div class="degree-badge">Master's</div>
-                            <div class="education-icon">🎓</div>
+            <div class="certifications-grid">
+                <div class="cert-card">
+                    <div class="cert-header">
+                        <div class="cert-icon">
+                            <i class="fas fa-graduation-cap"></i>
                         </div>
-                        <div class="education-content">
-                            <h3>Master of Science in Computer Information Science</h3>
-                            <p class="institution">State University of New York, United States</p>
-                            <div class="focus-areas">
-                                <span class="focus-tag">AI/ML</span>
-                                <span class="focus-tag">Data Science</span>
-                                <span class="focus-tag">Cloud Computing</span>
+                        <div class="cert-badge">
+                            <span class="badge-text">MASTER'S DEGREE</span>
+                        </div>
+                    </div>
+                    <div class="cert-content">
+                        <div class="cert-title">Master of Science</div>
+                        <div class="cert-subtitle">Computer Information Science</div>
+                        <div class="cert-issuer">
+                            <i class="fas fa-university"></i>
+                            <span>State University of New York</span>
+                        </div>
+                        <div class="cert-details">
+                            <div class="cert-date">
+                                <i class="fas fa-calendar"></i>
+                                <span>2020 - 2022</span>
                             </div>
+                            <div class="cert-location">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>United States</span>
+                            </div>
+                        </div>
+                        <div class="cert-credits">
+                            <div class="credits-label">Specialization:</div>
+                            <div class="credits-list">AI/ML • Data Science • Cloud Computing</div>
                         </div>
                     </div>
                 </div>
                 
-                <div class="education-item">
-                    <div class="education-year">2014-2018</div>
-                    <div class="education-card">
-                        <div class="education-header">
-                            <div class="degree-badge">Bachelor's</div>
-                            <div class="education-icon">🎓</div>
+                <div class="cert-card">
+                    <div class="cert-header">
+                        <div class="cert-icon">
+                            <i class="fas fa-graduation-cap"></i>
                         </div>
-                        <div class="education-content">
-                            <h3>Bachelor of Science in Computer Science</h3>
-                            <p class="institution">Jawaharlal Nehru Technological University, India</p>
-                            <div class="focus-areas">
-                                <span class="focus-tag">Software Engineering</span>
-                                <span class="focus-tag">Algorithms</span>
-                                <span class="focus-tag">Data Structures</span>
+                        <div class="cert-badge">
+                            <span class="badge-text">BACHELOR'S DEGREE</span>
+                        </div>
+                    </div>
+                    <div class="cert-content">
+                        <div class="cert-title">Bachelor of Science</div>
+                        <div class="cert-subtitle">Computer Science</div>
+                        <div class="cert-issuer">
+                            <i class="fas fa-university"></i>
+                            <span>Jawaharlal Nehru Technological University</span>
+                        </div>
+                        <div class="cert-details">
+                            <div class="cert-date">
+                                <i class="fas fa-calendar"></i>
+                                <span>2014 - 2018</span>
                             </div>
+                            <div class="cert-location">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>India</span>
+                            </div>
+                        </div>
+                        <div class="cert-credits">
+                            <div class="credits-label">Specialization:</div>
+                            <div class="credits-list">Software Engineering • Algorithms • Data Structures</div>
                         </div>
                     </div>
                 </div>
