--- a/index.html
+++ b/index.html
@@ -1041,24 +1041,70 @@
                 <p class="section-subtitle">Academic foundation and specialized training</p>
             </div>
             
-            <div class="education-grid">
-                <div class="education-card">
-                    <div class="education-icon">🎓</div>
-                    <div class="education-content">
-                        <h3>Master of Science in Computer Information Science</h3>
-                        <p class="institution">State University of New York</p>
-                        <p class="year">2020 - 2022</p>
-                        <p class="focus">AI/ML, Data Science, Cloud Computing</p>
+            <div class="education-certs-grid">
+                <div class="education-cert-card">
+                    <div class="education-cert-header">
+                        <div class="education-cert-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="education-cert-badge">
+                            <span class="badge-text">MASTER'S DEGREE</span>
+                        </div>
+                    </div>
+                    <div class="education-cert-content">
+                        <div class="education-cert-title">Master of Science</div>
+                        <div class="education-cert-subtitle">Computer Information Science</div>
+                        <div class="education-cert-issuer">
+                            <i class="fas fa-university"></i>
+                            <span>State University of New York</span>
+                        </div>
+                        <div class="education-cert-details">
+                            <div class="education-cert-date">
+                                <i class="fas fa-calendar"></i>
+                                <span>2020 - 2022</span>
+                            </div>
+                            <div class="education-cert-location">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>United States</span>
+                            </div>
+                        </div>
+                        <div class="education-cert-credits">
+                            <div class="education-credits-label">Specialization:</div>
+                            <div class="education-credits-list">AI/ML • Data Science • Cloud Computing</div>
+                        </div>
                     </div>
                 </div>
                 
-                <div class="education-card">
-                    <div class="education-icon">🎓</div>
-                    <div class="education-content">
-                        <h3>Bachelor of Science in Computer Science</h3>
-                        <p class="institution">Jawaharlal Nehru Technological University</p>
-                        <p class="year">2014 - 2018</p>
-                        <p class="focus">Software Engineering, Algorithms, Data Structures</p>
+                <div class="education-cert-card">
+                    <div class="education-cert-header">
+                        <div class="education-cert-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="education-cert-badge">
+                            <span class="badge-text">BACHELOR'S DEGREE</span>
+                        </div>
+                    </div>
+                    <div class="education-cert-content">
+                        <div class="education-cert-title">Bachelor of Science</div>
+                        <div class="education-cert-subtitle">Computer Science</div>
+                        <div class="education-cert-issuer">
+                            <i class="fas fa-university"></i>
+                            <span>Jawaharlal Nehru Technological University</span>
+                        </div>
+                        <div class="education-cert-details">
+                            <div class="education-cert-date">
+                                <i class="fas fa-calendar"></i>
+                                <span>2014 - 2018</span>
+                            </div>
+                            <div class="education-cert-location">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>India</span>
+                            </div>
+                        </div>
+                        <div class="education-cert-credits">
+                            <div class="education-credits-label">Specialization:</div>
+                            <div class="education-credits-list">Software Engineering • Algorithms • Data Structures</div>
+                        </div>
                     </div>
                 </div>
             </div>
