Replace header brand text with motivational welcome quote
🚀 Header Brand Enhancement:

✨ Motivational Welcome Quote:
- Replaced 'Santosh' with 'Innovate • Create • Transform'
- Professional and inspiring message for visitors
- Uses bullet separators for visual appeal
- Conveys action-oriented mindset and capabilities

🎨 Typography & Styling:
- Adjusted font size: 1.25rem → 1.1rem for better fit
- Added letter-spacing: 0.5px for enhanced readability
- Maintains bold weight (700) for impact
- Preserves white color and professional appearance

📱 Responsive Design:
- Mobile (768px): font-size 0.95rem, letter-spacing 0.3px
- Small mobile (480px): font-size 0.85rem, letter-spacing 0.2px
- Ensures quote remains readable on all screen sizes
- Progressive scaling for optimal user experience

🎯 Brand Identity:
- Rocket icon maintained for innovation theme
- Professional and motivational tone
- Aligns with AI/ML engineering expertise
- Creates strong first impression for visitors

✅ Benefits:
- More engaging and professional header
- Motivational message that inspires visitors
- Better brand positioning and messaging
- Maintains clean, modern design aesthetic
- Responsive across all device sizes

The header now welcomes visitors with an inspiring message that reflects innovation, creativity, and transformation!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <span class="brand-icon"><i class="fas fa-rocket"></i></span>
-                <span class="brand-text">Santosh</span>
+                <span class="brand-text">Innovate • Create • Transform</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
