Update profile photo to use photo.jpg
🖼️ Profile Photo Update:
- Changed HTML to reference 'photo.jpg' instead of 'profile-photo.jpg'
- Ready for new professional photo upload
- Maintains fallback system with 'SS' initials
- Professional styling and responsive design preserved

Next: Save your photo as 'photo.jpg' in the portfolio directory

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <!-- Profile Photo and Basic Info -->
                                 <div class="profile-header">
                                     <div class="profile-photo-section">
-                                        <img src="profile-photo.jpg" alt="Santosh Sirikonda" class="profile-photo" id="profileImg" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                                        <img src="photo.jpg" alt="Santosh Sirikonda" class="profile-photo" id="profileImg" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                         <div class="profile-photo-placeholder" style="display: none;">
                                             <span class="initials">SS</span>
                                         </div>
