--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <a href="mailto:santosh.sirikonda@example.com">santosh.sirikonda@example.com</a>
+                            <a href="mailto:santosh.kumar120517@gmail.com">santosh.kumar120517@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -1162,7 +1162,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <span class="brand-icon">🚀</span>
+                    <span class="brand-icon"></span>
                     <span>Santosh Sirikonda</span>
                 </div>
                 <p class="footer-text">Building the future with AI and innovation.</p>
