--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>GitHub</h4>
-                            <a href="https://github.com/Sirikondasantosh" target="_blank">View my code</a>
+                            <a href="https://github.com/" target="_blank">View my code</a>
                         </div>
                     </div>
                 </div>
@@ -1167,7 +1167,7 @@
                 </div>
                 <p class="footer-text">Building the future with AI and innovation.</p>
                 <div class="footer-social">
-                    <a href="https://github.com/Sirikondasantosh" target="_blank" class="social-link">
+                    <a href="https://github.com/" target="_blank" class="social-link">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/santosh-sirikonda-1ab988246/" target="_blank" class="social-link">
